--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,2 +1,62 @@
 @import 'tailwindcss';
 @plugin '@tailwindcss/typography';
+@config "../../tailwind.config.js";
+
+@theme inline {
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-border: var(--border);
+  --color-ring: var(--ring);
+
+  --font-sans: var(--font-sans);
+  --radius: var(--radius);
+  --shadow: var(--shadow);
+}
+
+:root {
+  --font-sans: Inter, sans-serif;
+  --radius: 0.35rem;
+  --shadow:
+    0px 2px 0px 0px hsl(0 0% 20% / 0.15), 0px 1px 2px -1px hsl(0 0% 20% / 0.15);
+
+  --background: oklch(0.2178 0 0);
+  --foreground: oklch(0.8853 0 0);
+
+  --card: oklch(0.2435 0 0);
+  --card-foreground: oklch(0.8853 0 0);
+
+  --primary: oklch(0.7058 0 0);
+  --primary-foreground: oklch(0.2178 0 0);
+
+  --secondary: oklch(0.3092 0 0);
+  --secondary-foreground: oklch(0.8853 0 0);
+
+  --muted: oklch(0.285 0 0);
+  --muted-foreground: oklch(0.5999 0 0);
+
+  --accent: oklch(0.3715 0 0);
+  --accent-foreground: oklch(0.8853 0 0);
+
+  --border: oklch(0.329 0 0);
+
+  --ring: oklch(0.7058 0 0);
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
