--- a/src/components/ProjectsCard/ProjectsCard.astro
+++ b/src/components/ProjectsCard/ProjectsCard.astro
@@ -22,7 +22,13 @@ const { heroImage, title, description, tags, github, liveDemo, projectPath } =
     class="border-border flex w-[640px] flex-col gap-5 rounded-lg border p-5"
   >
     <a href={projectPath}>
-      <Image src={heroImage} alt={title} class="rounded-md object-cover" width={600} height={300} />
+      <Image
+        src={heroImage}
+        alt={title}
+        class="rounded-md object-cover"
+        width={600}
+        height={300}
+      />
     </a>
 
     <div class="flex flex-col">
