fix: image not resizing

--- a/src/components/ProjectsCard/ProjectsCard.astro
+++ b/src/components/ProjectsCard/ProjectsCard.astro
@@ -19,7 +19,7 @@ const { heroImage, title, description, tags, github, liveDemo, projectPath } =
 
 <div class="flex w-full items-start gap-8">
   <div
-    class="border-border flex w-[640px] flex-col gap-5 rounded-lg border p-5"
+    class="border-border flex w-full max-w-[640px] flex-col gap-5 rounded-lg border p-5"
   >
     <a href={projectPath}>
       <Image
