--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,4 +1,6 @@
 ---
+import type { ImageMetadata } from 'astro';
+import FallbackImage from '../../public/images/hero.png';
 import { SITE_AUTHOR, SITE_TITLE } from '../consts';
 import '../styles/global.css';
 
@@ -7,6 +9,7 @@ type Props = {
   description?: string;
   keywords?: string;
   author?: string;
+  image?: ImageMetadata;
 };
 
 const {
@@ -14,29 +17,42 @@ const {
   description = "A MEAN stack developer fueled by my passion for coding. Let's turn ideas into reality together!",
   keywords = 'Web Developer, Portfolio, MEAN stack, Web Development, Programming Projects',
   author = SITE_AUTHOR,
+  image = FallbackImage,
 } = Astro.props;
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 ---
 
+<!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
 
+<!-- Canonical URL -->
+<link rel="canonical" href={canonicalURL} />
+
+<!-- Primary Meta Tags -->
 <title>{title}</title>
+<meta name="title" content={title} />
 <meta name="description" content={description} />
 <meta name="keywords" content={keywords} />
 <meta name="author" content={author} />
 
-<!-- Open Graph -->
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
+<meta property="og:image" content={new URL(image.src, Astro.url)} />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content={Astro.url} />
+<meta property="twitter:title" content={title} />
+<meta property="twitter:description" content={description} />
+<meta property="twitter:image" content={new URL(image.src, Astro.url)} />
 
 <!-- Social usernames -->
 <meta name="linkedin:username" content="nathan-dungca-94975525a" />
 <meta name="github:username" content="DevWedeloper" />
-
-<link rel="canonical" href={canonicalURL} />
-
-<!-- Favicon -->
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
