--- a/src/components/ProjectsCard/ProjectsCard.astro
+++ b/src/components/ProjectsCard/ProjectsCard.astro
@@ -21,15 +21,13 @@ const { heroImage, title, description, tags, github, liveDemo, projectPath } =
   <div
     class="border-border flex w-full max-w-[640px] flex-col gap-5 rounded-lg border p-5"
   >
-    <a href={projectPath}>
-      <Image
-        src={heroImage}
-        alt={title}
-        class="rounded-md object-cover"
-        width={600}
-        height={300}
-      />
-    </a>
+    <Image
+      src={heroImage}
+      alt={title}
+      class="rounded-md object-cover"
+      width={600}
+      height={300}
+    />
 
     <div class="flex flex-col">
       <p class="text-xl font-semibold tracking-widest">{title}</p>
@@ -90,30 +88,25 @@ const { heroImage, title, description, tags, github, liveDemo, projectPath } =
           </svg>
           Live Demo
         </ProjectsCardLink>
+
+        <ProjectsCardLink link={projectPath} newTab={false}>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="lucide lucide-arrow-right-icon lucide-arrow-right"
+          >
+            <path d="M5 12h14"></path><path d="m12 5 7 7-7 7"></path>
+          </svg>
+          Learn More
+        </ProjectsCardLink>
       </div>
     </div>
   </div>
-
-  <a
-    href={projectPath}
-    class="bg-foreground/20 flex flex-col rounded-full p-2 max-sm:hidden"
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      width="18"
-      height="18"
-      viewBox="0 0 24 24"
-      fill="none"
-      stroke="currentColor"
-      stroke-width="2"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-    >
-      <path d="M15 3h6v6"></path><path d="M10 14 21 3"></path><path
-        d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
-      >
-      </path>
-    </svg>
-    <span class="sr-only">View Project Details</span>
-  </a>
 </div>
