fix: links do not have a descriptive text

--- a/src/components/ProjectsCard/ProjectsCard.astro
+++ b/src/components/ProjectsCard/ProjectsCard.astro
@@ -102,6 +102,7 @@ const { heroImage, title, description, tags, github, liveDemo, projectPath } =
             <path d="M5 12h14"></path><path d="m12 5 7 7-7 7"></path>
           </svg>
           Learn More
+          <span class="sr-only">Learn more about {title}</span>
         </ProjectsCardLink>
       </div>
     </div>
