refactor: update description

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -12,7 +12,7 @@ type Props = {
 
 const {
   title = SITE_TITLE,
-  description = "A MEAN stack developer fueled by my passion for coding. Let's turn ideas into reality together!",
+  description = "Self-taught full stack developer passionate about building modern web applications with JavaScript and TypeScript. Always learning, always building—let's turn ideas into reality together!",
   keywords = 'Web Developer, Portfolio, MEAN stack, Web Development, Programming Projects',
   author = SITE_AUTHOR,
 } = Astro.props;
