refactor: remove unnecessary code

--- a/src/components/ExperienceCard.astro
+++ b/src/components/ExperienceCard.astro
@@ -17,7 +17,7 @@ const {
   employmentType,
   techStack,
   description,
-} = Astro.props as Props;
+} = Astro.props;
 ---
 
 <div class="text-foreground/60 flex gap-10">
