--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import TechCard from '../components/TechCard.astro';
 import BaseLayout from '../layouts/BaseLayout.astro';
 
 const posts = await getCollection('projects');
-const sortedPosts = posts.sort((a, b) => a.data.order - b.data.order);
+const sortedPosts = posts.sort((a, b) => b.data.order - a.data.order);
 ---
 
 <BaseLayout>
