feat: add google search console verification

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -78,3 +78,6 @@ const ogImageUrl = getCldOgImageUrl({
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={ogImageUrl} />
+
+<!-- Google Search Console Verification -->
+<meta name="google-site-verification" content="zdhbUH_Zy6KPIhmnUyiDAmkYTDuO2WSBKlhwURJpU_w" />
