refactor: add nx, hono, graphql icons

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -76,6 +76,7 @@ const sortedPosts = posts.sort((a, b) => b.data.order - a.data.order);
       <TechCard icon="icons/expressjs.svg" name="Express.js" highlighted lazy />
       <TechCard icon="icons/nodejs.svg" name="Node.js" lazy />
       <TechCard icon="icons/bun.svg" name="Bun" lazy />
+      <TechCard icon="icons/hono.svg" name="Hono" lazy />
 
       <!-- Full-Stack -->
       <TechCard icon="icons/nextjs.svg" name="Next.js" highlighted lazy />
@@ -99,12 +100,14 @@ const sortedPosts = posts.sort((a, b) => b.data.order - a.data.order);
       <TechCard icon="icons/github.svg" name="GitHub" lazy />
       <TechCard icon="icons/trpc.svg" name="tRPC" lazy />
       <TechCard icon="icons/vite.svg" name="Vite" lazy />
+      <TechCard icon="icons/nx.svg" name="Nx" lazy />
 
       <!-- Technologies -->
       <TechCard icon="icons/aws.svg" name="AWS" lazy />
       <TechCard icon="icons/oauth.svg" name="OAuth 2.0" lazy />
       <TechCard icon="icons/supabase.svg" name="Supabase" lazy />
       <TechCard icon="icons/stripe.svg" name="Stripe" lazy />
+      <TechCard icon="icons/graphql.svg" name="GraphQL" lazy />
     </ul>
   </section>
 
