--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,12 +1,9 @@
 ---
-const email = 'devwedeloper@gmail.com';
+const email = 'devwedeloper@gmail.com'
 ---
 
-<footer
-  id="contact"
-  class="border-border mt-5 flex w-full items-center border-t pt-6 pb-1"
->
-  <div class="text-foreground/60 hover:text-foreground flex items-center gap-2">
+<footer id="contact" class="mt-5 flex w-full items-center border-t border-border pt-6 pb-1">
+  <div class="flex items-center gap-2 text-foreground/60 hover:text-foreground">
     <svg
       xmlns="http://www.w3.org/2000/svg"
       width="24"
@@ -18,14 +15,7 @@ const email = 'devwedeloper@gmail.com';
       stroke-linecap="round"
       stroke-linejoin="round"
     >
-      <path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"></path><rect
-        x="2"
-        y="4"
-        width="20"
-        height="16"
-        rx="2"
-      >
-      </rect>
+      <path d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"></path><rect x="2" y="4" width="20" height="16" rx="2"> </rect>
     </svg>
     <p>
       {email}
