--- a/src/components/ImageList.astro
+++ b/src/components/ImageList.astro
@@ -1,12 +1,12 @@
 ---
-import { CldImage } from 'astro-cloudinary';
-import { cn } from '../lib/utils';
+import { CldImage } from 'astro-cloudinary'
+import { cn } from '../lib/utils'
 
 type Props = {
-  images: string[];
-};
+  images: string[]
+}
 
-const { images }: Props = Astro.props;
+const { images }: Props = Astro.props
 ---
 
 <div class="flex flex-col items-center gap-8">
