--- a/src/components/ExperienceCard.astro
+++ b/src/components/ExperienceCard.astro
@@ -1,31 +1,23 @@
 ---
 type Props = {
-  startYear: number;
-  endYear: number;
-  jobTitle: string;
-  company: string;
-  employmentType: string;
-  techStack: string[];
-  description: string;
-};
+  startYear: number
+  endYear: number
+  jobTitle: string
+  company: string
+  employmentType: string
+  techStack: string[]
+  description: string
+}
 
-const {
-  startYear,
-  endYear,
-  jobTitle,
-  company,
-  employmentType,
-  techStack,
-  description,
-} = Astro.props;
+const { startYear, endYear, jobTitle, company, employmentType, techStack, description } = Astro.props
 ---
 
-<div class="text-foreground/60 flex gap-10">
+<div class="flex gap-10 text-foreground/60">
   <p class="hidden whitespace-nowrap sm:block">
     {startYear} - {endYear}
   </p>
   <div class="flex flex-col">
-    <p class="text-foreground text-lg font-semibold">
+    <p class="text-lg font-semibold text-foreground">
       {jobTitle}
     </p>
     <p class="mb-4">
@@ -34,7 +26,7 @@ const {
         • ({startYear} - {endYear})
       </span>
     </p>
-    <p class="text-md mb-2">
+    <p class="mb-2">
       <span class="font-semibold">Tech Stack:</span>
       {' '}{techStack.join(', ')}
     </p>
