--- a/src/components/ProjectsCard/ProjectsCard.astro
+++ b/src/components/ProjectsCard/ProjectsCard.astro
@@ -1,25 +1,22 @@
 ---
-import { CldImage } from 'astro-cloudinary';
-import ProjectsCardLink from './ProjectsCardLink.astro';
+import { CldImage } from 'astro-cloudinary'
+import ProjectsCardLink from './ProjectsCardLink.astro'
 
 type Props = {
-  heroImage: string;
-  title: string;
-  description: string;
-  tags: string[];
-  github: string;
-  liveDemo: string;
-  projectPath: string;
-};
+  heroImage: string
+  title: string
+  description: string
+  tags: string[]
+  github: string
+  liveDemo: string
+  projectPath: string
+}
 
-const { heroImage, title, description, tags, github, liveDemo, projectPath } =
-  Astro.props;
+const { heroImage, title, description, tags, github, liveDemo, projectPath } = Astro.props
 ---
 
 <div class="flex w-full items-start gap-8">
-  <div
-    class="border-border flex w-full max-w-[640px] flex-col gap-5 rounded-lg border p-5"
-  >
+  <div class="flex w-full max-w-[640px] flex-col gap-5 rounded-lg border border-border p-5">
     <CldImage
       src={heroImage}
       alt={title}
@@ -31,19 +28,11 @@ const { heroImage, title, description, tags, github, liveDemo, projectPath } =
 
     <div class="flex flex-col">
       <p class="text-xl font-semibold tracking-widest">{title}</p>
-      <p class="text-foreground/60 mt-3">{description}</p>
+      <p class="mt-3 text-foreground/60">{description}</p>
       <div class="mt-5 mb-4 flex flex-wrap gap-2">
-        {
-          tags?.map((tag: any) => (
-            <span class="bg-accent text-accent-foreground rounded px-2 py-1 text-xs">
-              {tag}
-            </span>
-          ))
-        }
+        {tags?.map((tag: any) => <span class="rounded bg-accent px-2 py-1 text-xs text-accent-foreground">{tag}</span>)}
       </div>
-      <div
-        class="mt-4 flex w-full items-center justify-between gap-2 max-md:flex-col"
-      >
+      <div class="mt-4 flex w-full items-center justify-between gap-2 max-md:flex-col">
         <ProjectsCardLink link={github}>
           <svg
             xmlns="http://www.w3.org/2000/svg"
@@ -76,13 +65,8 @@ const { heroImage, title, description, tags, github, liveDemo, projectPath } =
             stroke-linecap="round"
             stroke-linejoin="round"
           >
-            <path
-              d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"
-            >
-            </path><path
-              d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"
-            >
-            </path>
+            <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"> </path>
+            <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"> </path>
           </svg>
           Live Demo
         </ProjectsCardLink>
