--- a/src/components/ProjectsCard/ProjectsCardLink.astro
+++ b/src/components/ProjectsCard/ProjectsCardLink.astro
@@ -1,16 +1,16 @@
 ---
 type Props = {
-  link: string;
-  newTab?: boolean;
-};
+  link: string
+  newTab?: boolean
+}
 
-const { link, newTab = true } = Astro.props;
+const { link, newTab = true } = Astro.props
 ---
 
 <a
   href={link}
   target={newTab ? '_blank' : '_self'}
-  class="bg-secondary text-secondary-foreground hover:bg-secondary/80 flex w-full items-center justify-center gap-2 rounded-full px-4 py-2 text-xs font-bold uppercase transition-all max-md:w-full"
+  class="flex w-full items-center justify-center gap-2 rounded-full bg-secondary px-4 py-2 text-xs font-bold text-secondary-foreground uppercase transition-all hover:bg-secondary/80 max-md:w-full"
 >
   <slot />
 </a>
