--- a/src/components/Prose.astro
+++ b/src/components/Prose.astro
@@ -1,3 +1,3 @@
-<div class="prose prose-invert prose-projects max-w-none">
+<div class="prose prose-projects max-w-none prose-invert">
   <slot />
 </div>
