--- a/src/components/TechCard.astro
+++ b/src/components/TechCard.astro
@@ -1,26 +1,26 @@
 ---
-import { cn } from '../lib/utils';
+import { cn } from '../lib/utils'
 
 type Props = {
-  icon: string;
-  name: string;
-  highlighted?: boolean;
-  lazy?: boolean;
-};
+  icon: string
+  name: string
+  highlighted?: boolean
+  lazy?: boolean
+}
 
-const { icon, name, highlighted = false, lazy = false } = Astro.props;
+const { icon, name, highlighted = false, lazy = false } = Astro.props
 ---
 
 <li>
   <div
-    class="group border-border bg-card hover:border-foreground/20 flex aspect-[4/3] h-24 w-full flex-col items-center justify-center rounded-2xl border p-4 text-center transition duration-300 hover:brightness-110"
+    class="group flex aspect-[4/3] h-24 w-full flex-col items-center justify-center rounded-2xl border border-border bg-card p-4 text-center transition duration-300 hover:border-foreground/20 hover:brightness-110"
   >
     <img
       src={icon}
-      alt={name + ' logo'}
+      alt={`${name} logo`}
       class={cn(
         'mb-2 h-8 w-8 transition-transform duration-300 group-hover:-translate-y-1',
-        highlighted && 'bg-foreground rounded-full border-1 border-foreground',
+        highlighted && 'rounded-full border-1 border-foreground bg-foreground',
       )}
       {...lazy ? { loading: 'lazy' } : {}}
     />
