--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,14 +1,14 @@
 ---
-import BaseHead from '../components/BaseHead.astro';
-import Footer from '../components/Footer.astro';
-import Header from '../components/Header.astro';
+import BaseHead from '../components/BaseHead.astro'
+import Footer from '../components/Footer.astro'
+import Header from '../components/Header.astro'
 
 type Props = {
-  title?: string;
-  description?: string;
-};
+  title?: string
+  description?: string
+}
 
-const { title, description } = Astro.props;
+const { title, description } = Astro.props
 ---
 
 <html lang="en">
@@ -16,9 +16,7 @@ const { title, description } = Astro.props;
     <BaseHead title={title} description={description} />
   </head>
 
-  <body
-    class="mx-auto h-full w-full max-w-[47.5rem] p-6 font-sans leading-relaxed tracking-wide"
-  >
+  <body class="mx-auto h-full w-full max-w-[47.5rem] p-6 font-sans leading-relaxed tracking-wide">
     <Header />
 
     <main class="container mx-auto space-y-24 px-4 py-12">
