--- a/src/layouts/ProjectsLayout.astro
+++ b/src/layouts/ProjectsLayout.astro
@@ -1,11 +1,11 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import { SITE_TITLE } from '../consts';
-import BaseLayout from './BaseLayout.astro';
+import type { CollectionEntry } from 'astro:content'
+import { SITE_TITLE } from '../consts'
+import BaseLayout from './BaseLayout.astro'
 
-type Props = CollectionEntry<'projects'>['data'];
+type Props = CollectionEntry<'projects'>['data']
 
-const { title, summary } = Astro.props;
+const { title, summary } = Astro.props
 ---
 
 <BaseLayout title={`${SITE_TITLE} | ${title}`} description={summary}>
