--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -1,19 +1,19 @@
 ---
-import { getCollection, render } from 'astro:content';
-import Prose from '../../components/Prose.astro';
-import ProjectsLayout from '../../layouts/ProjectsLayout.astro';
+import { getCollection, render } from 'astro:content'
+import Prose from '../../components/Prose.astro'
+import ProjectsLayout from '../../layouts/ProjectsLayout.astro'
 
 export async function getStaticPaths() {
-  const posts = await getCollection('projects');
+  const posts = await getCollection('projects')
 
   return posts.map((post) => ({
     params: { slug: post.id },
     props: post,
-  }));
+  }))
 }
 
-const post = Astro.props;
-const { Content } = await render(post);
+const post = Astro.props
+const { Content } = await render(post)
 ---
 
 <ProjectsLayout {...post.data}>
