feat: add sqlite, libsql, turso, openapi to skills

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,6 +84,9 @@ const sortedPosts = posts.sort((a, b) => b.data.order - a.data.order)
       <TechCard icon="icons/mongodb.svg" name="MongoDB" lazy />
       <TechCard icon="icons/postgresql.svg" name="PostgreSQL" lazy />
       <TechCard icon="icons/drizzle-orm.svg" name="Drizzle ORM" lazy />
+      <TechCard icon="icons/sqlite.svg" name="SQLite" lazy />
+      <TechCard icon="icons/libsql.svg" name="libSQL" lazy />
+      <TechCard icon="icons/turso.svg" name="Turso" lazy />
 
       <!-- Tools -->
       <TechCard icon="icons/git.svg" name="Git" lazy />
@@ -98,6 +101,7 @@ const sortedPosts = posts.sort((a, b) => b.data.order - a.data.order)
       <TechCard icon="icons/supabase.svg" name="Supabase" lazy />
       <TechCard icon="icons/stripe.svg" name="Stripe" lazy />
       <TechCard icon="icons/graphql.svg" name="GraphQL" lazy />
+      <TechCard icon="icons/openapi.svg" name="OpenAPI" lazy />
     </ul>
   </section>
 
