feat: add lemon squeezy to skills

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -100,6 +100,7 @@ const sortedPosts = posts.sort((a, b) => b.data.order - a.data.order)
       <TechCard icon="icons/oauth.svg" name="OAuth 2.0" lazy />
       <TechCard icon="icons/supabase.svg" name="Supabase" lazy />
       <TechCard icon="icons/stripe.svg" name="Stripe" lazy />
+      <TechCard icon="icons/lemonsqueezy.svg" name="Lemon Squeezy" lazy />
       <TechCard icon="icons/graphql.svg" name="GraphQL" lazy />
       <TechCard icon="icons/openapi.svg" name="OpenAPI" lazy />
     </ul>
