feat: include turborepo to skills

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,6 +94,7 @@ const sortedPosts = posts.sort((a, b) => b.data.order - a.data.order)
       <TechCard icon="icons/trpc.svg" name="tRPC" lazy />
       <TechCard icon="icons/vite.svg" name="Vite" lazy />
       <TechCard icon="icons/nx.svg" name="Nx" lazy />
+      <TechCard icon="icons/turborepo.svg" name="Turborepo" highlighted lazy />
 
       <!-- Technologies -->
       <TechCard icon="icons/aws.svg" name="AWS" lazy />
