feat: add playwright to skills

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -79,6 +79,7 @@ const sortedPosts = posts.sort((a, b) => b.data.order - a.data.order)
       <TechCard icon="icons/karma.svg" name="Karma" lazy />
       <TechCard icon="icons/jest.svg" name="Jest" lazy />
       <TechCard icon="icons/vitest.svg" name="Vitest" lazy />
+      <TechCard icon="icons/playwright.svg" name="Playwright" lazy />
 
       <!-- Database & ORMs -->
       <TechCard icon="icons/mongodb.svg" name="MongoDB" lazy />
