--- a/src/components/ImageList.astro
+++ b/src/components/ImageList.astro
@@ -17,7 +17,7 @@ const { images }: Props = Astro.props
         alt={`Slide ${i + 1}`}
         class={cn('!m-0 rounded-xl border-2')}
         width={640}
-        height={360}
+        height={undefined}
         sizes="(max-width: 768px) 75vw, (max-width: 1200px) 600px, 600px"
       />
     ))
